[project]
name = "pixverse-api"
version = "0.0.1"
description = ""
authors = [
    {name = "Vladimir"},
]
requires-python = "<4.0,>=3.11"
dependencies = [
    "fastapi",
    "uvicorn[standard]",
    "python-multipart",
    "asyncpg",
    "sqlalchemy",
    "alembic",
    "httpx",
    "aiogram",
]

[tool.uv]
  native-tls = true

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
include = ["**"]
exclude = [".venv"]

[tool.hatch.build.targets.sdist]
include = ["**"]
exclude = [".venv"]